src/objects/Int_Agreement_Interest__c.object
<CustomObject>
    <description>Int Agreement Interest</description>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreements Interest</relationshipLabel>
        <relationshipName>Int_Agreements_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed Check Box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <description>Interest Amount</description>
        <label>Interest Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Transaction Date</description>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <description>Transaction ID</description>
        <label>Transaction ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Int Agreement Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Committed__c</columns>
        <columns>Interest_Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AGI-{0000000000}</displayFormat>
        <label>Agreement Interest Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>